--- a/test.ipynb
+++ b/test.ipynb
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "for d in dirs:\n",
     "    path = os.path.join(os.getcwd(), d)\n",
     "    with open(os.path.join(path, f\"ch{d.split('-')[0]}.ipynb\"), \"w\") as file:\n",
-    "        file.write(f\"###Chapter {d.split('-')[0]}\")"
+    "        pass"
    ]
   },
   {
