--- a/test.ipynb
+++ b/test.ipynb
@@ -100,6 +100,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for d in dirs:\n",
+    "    path = os.path.join(os.getcwd(), d)\n",
+    "    with open(os.path.join(path, \"README.md\"), \"w\") as file:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
